--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "babel-preset-es2017": "^6.24.1"
   },
   "dependencies": {
-    "commander": "^2.9.0",
     "es6-promise": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
-    "rxjs": "^5.3.0"
+    "md5": "^2.2.1",
+    "rxjs": "^5.3.0",
+    "xml2js": "^0.4.17"
   }
 }
