--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-es2017": "^6.24.1"
   },
   "dependencies": {
+    "babel-preset-stage-1": "^6.24.1",
     "es6-promise": "^4.1.0",
     "isomorphic-fetch": "^2.2.1",
     "md5": "^2.2.1",
