--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-preset-stage-1": "^6.24.1",
     "es6-promise": "^4.1.0",
+    "feed-parse-lib": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
     "md5": "^2.2.1",
     "rxjs": "^5.3.0",
