--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "feedjs",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "main.dist.js",
   "scripts": {
     "start": "node_modules/.bin/babel-node main.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node_modules/.bin/babel main.js > main.dist.js",
+    "prepublish": "npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "babel-preset-stage-1": "^6.24.1",
+    "colors": "^1.1.2",
     "es6-promise": "^4.1.0",
     "feed-parse-lib": "^1.0.0",
     "isomorphic-fetch": "^2.2.1",
