--- a/.babelrc
+++ b/.babelrc
@@ -1,3 +1,7 @@
 {
-  "presets": ["es2015", "es2016", "es2017", "stage-1"]
+  "presets": ["es2015", "es2016", "es2017", "stage-1"],
+  "plugins": ["transform-async-to-generator", ["transform-runtime", {
+    "polyfill": false,
+    "regenerator": true
+  }]]
 }
