--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "feedjs",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
-  "main": "main.dist.js",
+  "main": "dist/main.js",
   "scripts": {
     "start": "node_modules/.bin/babel-node main.js",
-    "build": "node_modules/.bin/babel main.js > main.dist.js",
-    "prepublish": "npm run build"
+    "compile": "node_modules/.bin/babel -d ./dist ./src",
+    "prepublish": "npm run compile"
   },
   "author": "",
   "license": "ISC",
@@ -14,10 +14,15 @@
     "babel-cli": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.24.1",
-    "babel-preset-es2017": "^6.24.1"
+    "babel-preset-es2017": "^6.24.1",
+    "babel-core": "^6.26.0",
+    "babel-plugin-transform-async-to-generator": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-runtime": "^6.26.0"
   },
   "dependencies": {
-    "babel-preset-stage-1": "^6.24.1",
     "colors": "^1.1.2",
     "es6-promise": "^4.1.0",
     "feed-parse-lib": "^1.0.0",
